@@ -261,11 +261,16 @@ prevent_razing_by_players = false
 minimum_city_separation = 1
 disallow_founding_next_to_foreign_city = true
 
-; Set to a number to limit railroad movement to that many tiles per turn. To return to infinite railroad movement, set to false or a number <=0.
+; Set to a number to limit railroad movement to that many tiles per turn. To return to infinite railroad movement, set to false or a number <=0. By
+; default, all units travel the same distance along limited rails like in Civ 4, but this can be changed by toggling the next option below.
 ; NOTE: For best results, the railroad limit should be a multiple of the "movement rate along roads" set in the editor (usually 3). The limitation
 ; will work in any case, but setting the limit this way helps avoid an integer overflow issue inside the pathfinder that may cause it to fail to find
 ; the shortest paths for units with a large number of available moves.
 limit_railroad_movement = false
+
+; If set to true, limited railroads will work like fast roads instead of Civ 4 style railroads. The movement rate along fast roads is determined by
+; the limit_railroad_movement setting above. If that setting is false or <= 0, this option does nothing.
+limited_railroads_work_like_fast_roads = false
 
 remove_unit_limit = true
 remove_city_improvement_limit = true
