@@ -1,6 +1,7 @@
 - Allow perfume amounts to be specified as percentages
 - Adjustable chance for max one HP units to be destroyed by nuclear strikes
   - Controlled by config option chance_for_nukes_to_destroy_max_one_hp_units
+- Add limited_railroads_work_like_fast_roads option which does just that
 
 * RELEASE 20
 - Remove city improvement limit
